fix: Improve the display of accumulated information using flexbox for better alignment.

--- a/src/app/shared/layout/exibir-bilhete/acumuladao/bilhete-acumuladao.component.css
+++ b/src/app/shared/layout/exibir-bilhete/acumuladao/bilhete-acumuladao.component.css
@@ -92,3 +92,9 @@
     font-size: 12px;
     text-align: center;
 }
+
+.resultado, .premio, .valor, .total-acertos {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+}
